# comfyui-little-utility

./: .gitignore  LICENSE  NODES_UPDATE_SUMMARY.md  __init__.py  pyproject.toml
nodes/: TYPE_SWITCH_NODE_README.md  __init__.py  cache_node.py  global_var_node.py  image_download_node.py  image_info_node.py  latent_utils.py  lora_list_node.py  lora_selector_node.py  text_cleanup_node.py  text_combine_node.py  type_switch_node.py  workflow_save_node.py
nodes/server/: __init__.py  lora_api.py
web/: dynamic_inputs.js  global_var_title.js  lora_autocomplete.js
